<resources>
    <string name="app_name">SPS-HC20</string>
    <string name="arduino_board_not_found">Circuito di interfaccia non rilevato</string>
    <string name="arduino_board_connected">Connesso al circuito di interfaccia</string>
    <string name="arduino_board_disconnected">Disconnesso dal circuito di interfaccia</string>
    <string name="timer_start">Avvia</string>
    <string name="timer_stop">Pausa</string>
    <string name="timer_set">Cambia</string>
    <string name="timer_reset">Azzera</string>
    <string name="home_caption">LOCALI</string>
    <string name="guest_caption">OSPITI</string>
    <string name="seventh_foul">7F</string>
    <string name="first_timeout">T1</string>
    <string name="second_timeout">T2</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="configure">Configura</string>
    <string name="connect">Connetti</string>
    <string name="disconnect">Disconnetti</string>
    <string name="siren">Sirena</string>
    <string name="bulletin">Comunicato</string>
    <string name="timeout">Timeout</string>
    <string name="timeout_hint">Timeout in corso!\nIl tempo di gioco è fermo a %s.</string>
    <string name="timeout_restart">Riprendi</string>
    <string name="set_time_dialog_title">Cambia orario</string>
    <string name="set_time_dialog_message">Impostare il nuovo orario:</string>
    <string name="set_time_dialog_minute_second_separator">:</string>
    <string name="version_label">v. %s</string>
    <string name="general_preferences">Generale</string>
    <string name="siren_preferences">Sirena</string>
    <string name="timer_preferences">Contaminuti</string>
    <string name="debug_preferences">Diagnostica</string>
    <string name="siren_on_period_end">Suona la sirena di fine tempo</string>
    <string name="siren_on_timeout_call">Suona la sirena di inizio timeout</string>
    <string name="siren_on_timeout_end">Suona la sirena di immintente fine timeout</string>
    <string name="leading_zero_in_minutes">Mostra lo zero iniziale nei minuti</string>
    <string name="high_resolution_last_minute">Mostra i decimi di secondo nell\'ultimo minuto</string>
    <string name="period_duration">Durata di un tempo (in minuti)</string>
    <string name="show_transmission_stats">Mostra le statistiche di comunicazione</string>
    <string name="comm_stats_packets_sent">Pacchetti spediti: %s</string>
    <string name="comm_stats_packets_refused">Pacchetti rifiutati: %s</string>
    <string name="comm_stats_packets_lost">Pacchetti persi: %s</string>
    <string name="comm_stats_other_errors">Errori generici: %s</string>
    <string name="confirm_quit">Abbandonare l\'applicazione?</string>
    <string name="period_duration_alert">Un tempo di gioco dura %d minuti. Scegliere «%s» per modificare il valore.</string>
    <string name="bulletin_dialog_title">Comunicato</string>
    <string name="bulletin_dialog_message">Mostra un testo scorrevole sul display</string>
    <string name="bulletin_default_text">Inserire qui il testo scorrevole</string>
    <string name="bulletin_speed_label">Velocità di scorrimento</string>
    <string name="bulletin_speed_low">Bassa</string>
    <string name="bulletin_speed_medium">Media</string>
    <string name="bulletin_speed_high">Alta</string>
    <string name="bulletin_speed_ludicrous">Smodata</string>
    <string name="bulletin_show">Mostra</string>
    <string name="bulletin_hide">Nascondi</string>
    <!-- see associated delays in BulletinFragmentDialog object -->
    <string-array name="bulletin_speed_array">
        <item>@string/bulletin_speed_low</item>
        <item>@string/bulletin_speed_medium</item>
        <item>@string/bulletin_speed_high</item>
        <item>@string/bulletin_speed_ludicrous</item>
    </string-array>
</resources>
