<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:layout_width="wrap_content">

    <LinearLayout
        android:id="@+id/period_layout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/preferences_period_duration_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/period_duration" />

        <NumberPicker
            android:id="@+id/preferences_period_duration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="20" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/period_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/period_layout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/period_layout"
        app:layout_constraintTop_toTopOf="parent">

        <Switch
            android:id="@+id/preferences_siren_on_period_end"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/siren_on_period_end" />

        <Switch
            android:id="@+id/preferences_siren_on_timeout_call"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/siren_on_timeout_call" />

        <Switch
            android:id="@+id/preferences_siren_on_timeout_end"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/siren_on_timeout_end" />

        <Switch
            android:id="@+id/preferences_leading_zero_in_minutes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/leading_zero_in_minutes" />

        <Switch
            android:id="@+id/preferences_high_resolution_last_minute"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/high_resolution_last_minute" />

        <Switch
            android:id="@+id/preferences_show_transmission_stats"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/preferences_show_transmission_stats" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>